--- a/packages/l.toml
+++ b/packages/l.toml
@@ -43,7 +43,7 @@ build_commands = [
 # GCC Pass 2 - Full cross compiler
 
 [packages.libxcrypt]
-version = "4.4.38"
+version = "4.5.2"
 version_check = "github:besser82/libxcrypt"
 description = "Modern library for one-way hashing of passwords"
 url = "https://github.com/besser82/libxcrypt/releases/download/v${version}/libxcrypt-${version}.tar.xz"
@@ -79,7 +79,7 @@ build_order = 27
 depends = ["libmd"]
 
 [packages.libcap]
-version = "2.76"
+version = "2.77"
 version_check = "url:https://git.kernel.org/pub/scm/libs/libcap/libcap.git/refs/|libcap-([0-9]+\\.[0-9]+)"
 description = "POSIX capabilities library"
 url = "https://git.kernel.org/pub/scm/libs/libcap/libcap.git/snapshot/libcap-${version}.tar.gz"
@@ -108,7 +108,7 @@ build_commands = [
 ]
 
 [packages.libtirpc]
-version = "1.3.6"
+version = "1.3.7"
 version_check = "sourceforge:libtirpc"
 description = "Transport-Independent RPC library"
 url = "https://downloads.sourceforge.net/libtirpc/libtirpc-${version}.tar.bz2"
@@ -287,7 +287,7 @@ build_system = "autotools"
 depends = ["xorgproto", "util-macros"]
 
 [packages.xtrans]
-version = "1.5.2"
+version = "1.6.0"
 version_check = "xorg:lib/libxtrans"
 description = "X11 transport library"
 url = "https://www.x.org/releases/individual/lib/xtrans-${version}.tar.xz"
@@ -453,7 +453,7 @@ stage = 8
 build_system = "meson"
 
 [packages.libwnck]
-version = "43.1"
+version = "43.3"
 version_check = "gnome:libwnck"
 description = "Window Navigator Construction Kit"
 url = "https://download.gnome.org/sources/libwnck/43/libwnck-${version}.tar.xz"
@@ -494,7 +494,7 @@ build_system = "meson"
 depends = ["mesa", "libX11"]
 
 [packages.libinput]
-version = "1.27.1"
+version = "1.30.1"
 version_check = "freedesktop:libinput/libinput"
 description = "Input device handling library"
 url = "https://gitlab.freedesktop.org/libinput/libinput/-/archive/${version}/libinput-${version}.tar.gz"
@@ -670,7 +670,7 @@ depends = ["glib"]
 build_system = "autotools"
 
 [packages.libxfce4ui]
-version = "4.20.1"
+version = "4.20.2"
 version_check = "xfce:xfce/libxfce4ui"
 description = "Xfce UI library"
 url = "https://archive.xfce.org/src/xfce/libxfce4ui/4.20/libxfce4ui-${version}.tar.bz2"
@@ -682,7 +682,7 @@ depends = ["libxfce4util", "xfconf", "gtk3"]
 build_system = "autotools"
 
 [packages.libxfce4windowing]
-version = "4.20.4"
+version = "4.20.5"
 version_check = "xfce:xfce/libxfce4windowing"
 description = "Xfce windowing library"
 url = "https://archive.xfce.org/src/xfce/libxfce4windowing/4.20/libxfce4windowing-${version}.tar.bz2"
@@ -836,3 +836,21 @@ source_dir = "libevent-${version}-stable"
 depends = ["openssl"]
 configure_flags = "--disable-static"
 provides = ["/usr/lib/libevent.so"]
+
+[packages.libreoffice]
+version = "25.8.4"
+version_check = "url:https://download.documentfoundation.org/libreoffice/stable/|([0-9]+\\.[0-9]+\\.[0-9]+)/"
+description = "Free office suite (Writer, Calc, Impress, Draw, Base, Math)"
+url = "https://download.documentfoundation.org/libreoffice/src/${version}/libreoffice-${version}.tar.xz"
+git_url = "https://git.libreoffice.org/core"
+use_git = false
+stage = 14
+# LibreOffice requires many dependencies and has a complex build
+# See: https://wiki.documentfoundation.org/Development/BuildingOnLinux
+depends = ["python", "gtk3", "curl", "nss", "nspr", "icu", "libxml2", "libxslt", "openssl", "zlib", "jpeg", "libpng"]
+build_commands = [
+    "./autogen.sh --prefix=/usr --with-parallelism=${NPROC} --disable-firebird-sdbc --without-java --without-help --without-doxygen --enable-release-build --with-system-libs",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+provides = ["/usr/bin/libreoffice"]
