Fix build failures and improve package definitions
- pk-common: Fix find_packages_dir to prioritize pk's packages directory
  over source tree directories (curl has its own packages/ dir)
- curl: Use skip_optimization + configure_flags instead of build_commands
- glibc: Revert to 2.40 (2.43 has SHADOW_STACK_POINTER_OFFSET issues)
- mesa: Remove deprecated gallium-opencl option
- sqlite: Revert to 3.48.0 and add source_dir for tarball extraction
- vim: Add build_commands to run configure from src/ directory
- vulkan-headers: Add source_dir, build_system, and cmake_flags
- vulkan-loader: Add source_dir, depends, build_system, and cmake_flags
- ffmpeg: Add build_commands with --disable-x86asm (nasm not available)

--- a/packages/c.toml
+++ b/packages/c.toml
@@ -45,11 +45,8 @@ stage = 4
 build_order = 9
 depends = ["openssl", "ca-certificates"]
 # disable LTO - libtool has issues with nm output parsing
-build_commands = [
-    "CFLAGS='-O2 -pipe' LDFLAGS='' ./configure --prefix=/usr --with-openssl --with-ca-bundle=/etc/ssl/certs/ca-certificates.crt --enable-threaded-resolver --without-libpsl",
-    "make -j${NPROC}",
-    "make DESTDIR=${PKG} install"
-]
+skip_optimization = true
+configure_flags = "--with-openssl --with-ca-bundle=/etc/ssl/certs/ca-certificates.crt --enable-threaded-resolver --without-libpsl"
 
 [packages.cmake]
 version = "4.2.2"
