--- a/packages/f.toml
+++ b/packages/f.toml
@@ -127,10 +127,18 @@ provides = ["/usr/bin/firefox"]
 
 [packages.ffmpeg]
 version = "8.0.1"
-version_check = "url:https://github.com/FFmpeg/FFmpeg/tags|n([0-9]+\.[0-9]+\.?[0-9]*)"
+version_check = "url:https://github.com/FFmpeg/FFmpeg/tags|n([0-9]+\\.[0-9]+\\.?[0-9]*)"
 description = "Complete multimedia framework"
 url = "https://ffmpeg.org/releases/ffmpeg-${version}.tar.xz"
 git_url = "https://git.ffmpeg.org/ffmpeg.git"
 use_git = false
 stage = 16
-# Build with: --enable-nvenc --enable-cuda --enable-vaapi
+# Note: --disable-x86asm until nasm package is added (hand-optimized asm improves performance)
+# TODO: Add --enable-nvenc --enable-cuda --enable-vaapi when GPU drivers available
+skip_optimization = true
+build_commands = [
+    "./configure --prefix=/usr --enable-shared --disable-static --disable-debug --enable-gpl --enable-version3 --disable-doc --disable-x86asm",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+provides = ["/usr/bin/ffmpeg", "/usr/lib/libavcodec.so"]
