Update multiple packages to latest versions
Updated packages:
- ca-certificates: 2025-01-19 → 2025-12-02
- glibc: 2.40 → 2.43
- ghc: 9.10.1 → 9.14.1
- iputils: 20240905 → 20250605
- iana-etc: 20251215 → 20260123
- libarchive: 3.7.7 → 3.8.5
- libxkbfile: 1.1.3 → 1.2.0
- lib32-glibc: 2.40 → 2.43
- lib32-vulkan-loader: 1.4.339 → 1.4.341
- mangohud: 0.8.1 → 0.8.2
- nvptx-tools: 0.1 → 0.20240810
- pavucontrol: 6.0 → 6.2
- sqlite: 3.48.0 → 3.51.2 (with URL fix)
- sunshine: 2026.122.133140 → 2026.125.191446
- texlive: 2025 → 2026
- valgrind: 3.24.0 → 3.26.0
- vscode-source: 1.108.1 → 1.108.2
- which: 2.21 → 2.23

--- a/packages/n.toml
+++ b/packages/n.toml
@@ -57,7 +57,7 @@ build_order = 24
 # Built as part of GCC nvptx offload, not standalone
 
 [packages.nvptx-tools]
-version = "0.1"
+version = "0.20240810"
 version_check = "github:SourceryTools/nvptx-tools"
 description = "Assembler and linker for NVIDIA PTX (GCC offloading)"
 url = "https://github.com/SourceryTools/nvptx-tools/archive/refs/heads/master.tar.gz"
