Update 15 packages to latest versions
- at-spi2-core: 2.54.0 -> 2.58.3
- fontconfig: 2.16.0 -> 2.17.1
- ffmpeg: 8.0.1 -> 8.1
- gdk-pixbuf: 2.42.12 -> 2.44.4
- gedit: 47.0 -> 49.0
- ghostscript: 10.04.0 -> 10.06.0
- glib: 2.84.0 -> 2.86.3
- julia: 1.11.2 -> 1.12.4
- libdisplay-info: 0.2.0 -> 0.3.0
- libnl: 3.11.0 -> 3.12.0
- librsvg: 2.59.2 -> 2.61.3
- pango: 1.56.0 -> 1.57.0
- texlive-iso: 2025 -> 2026
- util-linux: 2.40.2 -> 2.42
- vte: 0.78.3 -> 0.82.3
- wine: 10.0 -> 11.1
- xfce4-pulseaudio-plugin: 0.4.8 -> 0.5.1

--- a/packages/l.toml
+++ b/packages/l.toml
@@ -167,10 +167,10 @@ configure_flags = "--with-python=/usr --with-history"
 provides = ["/usr/lib/libxml2.so", "/usr/bin/xmllint"]
 
 [packages.librsvg]
-version = "2.59.2"
+version = "2.61.3"
 version_check = "gnome:librsvg"
 description = "SVG rendering library (includes gdk-pixbuf SVG loader)"
-url = "https://download.gnome.org/sources/librsvg/2.59/librsvg-${version}.tar.xz"
+url = "https://download.gnome.org/sources/librsvg/2.61/librsvg-${version}.tar.xz"
 git_url = "https://gitlab.gnome.org/GNOME/librsvg.git"
 use_git = false
 stage = 9
@@ -269,10 +269,10 @@ build_commands = [
 provides = ["/usr/lib/liblz4.so"]
 
 [packages.libnl]
-version = "3.11.0"
+version = "3.12.0"
 version_check = "url:https://github.com/thom311/libnl/tags|libnl([0-9]+)_([0-9]+)_([0-9]+)"
 description = "Netlink protocol library suite"
-url = "https://github.com/thom311/libnl/releases/download/libnl3_11_0/libnl-${version}.tar.gz"
+url = "https://github.com/thom311/libnl/releases/download/libnl3_12_0/libnl-${version}.tar.gz"
 git_url = "https://github.com/thom311/libnl.git"
 use_git = false
 stage = 7
@@ -445,10 +445,10 @@ stage = 8
 build_system = "meson"
 
 [packages.libdisplay-info]
-version = "0.2.0"
+version = "0.3.0"
 version_check = "freedesktop:emersion/libdisplay-info"
 description = "EDID and DisplayID parsing library"
-url = "https://gitlab.freedesktop.org/emersion/libdisplay-info/-/releases/0.2.0/downloads/libdisplay-info-0.2.0.tar.xz"
+url = "https://gitlab.freedesktop.org/emersion/libdisplay-info/-/releases/${version}/downloads/libdisplay-info-${version}.tar.xz"
 stage = 8
 build_system = "meson"
 
