Fix false positive version updates
Reverted packages to actual latest available versions:
- fontconfig: 2.17.1 -> 2.16.0 (2.17.1 not released)
- util-linux: 2.42 -> 2.41 (2.42 not released)
- ffmpeg: 8.1 -> 8.0.1 (8.1 not released)
- wine: 11.1 -> 11.0 (fixed URL path)
- gdk-pixbuf: added -Dglycin=disabled flag

--- a/packages/g.toml
+++ b/packages/g.toml
@@ -308,7 +308,7 @@ stage = 9
 build_order = 6
 build_system = "meson"
 depends = ["shared-mime-info", "libjpeg-turbo", "libpng", "libtiff"]
-meson_flags = "-Dman=false -Dgtk_doc=false -Dintrospection=disabled -Dinstalled_tests=false -Dtests=false -Dbuiltin_loaders=none --wrap-mode=nodownload"
+meson_flags = "-Dman=false -Dgtk_doc=false -Dintrospection=disabled -Dinstalled_tests=false -Dtests=false -Dbuiltin_loaders=none -Dglycin=disabled --wrap-mode=nodownload"
 provides = ["/usr/lib/libgdk_pixbuf-2.0.so"]
 
 [packages.google-chrome]
