Add libsndfile, fix pulseaudio and xfce4-pulseaudio-plugin
- Add libsndfile 1.2.2 (required by pulseaudio)
  - Build as shared library with skip_optimization
  - Add CMAKE_POLICY_VERSION_MINIMUM for compatibility

- Fix pulseaudio build
  - Add build_system = "meson"
  - Use simple database backend (no tdb dependency)
  - Disable man pages (no XML::Parser dependency)
  - Add skip_optimization (ltdl compatibility)

- Fix xfce4-pulseaudio-plugin
  - Update URL extension from .tar.bz2 to .tar.xz
  - Add build_system = "meson"
  - Add depends on pulseaudio and xfce4-panel

--- a/packages/p.toml
+++ b/packages/p.toml
@@ -199,6 +199,9 @@ url = "https://www.freedesktop.org/software/pulseaudio/releases/pulseaudio-${ver
 git_url = "https://gitlab.freedesktop.org/pulseaudio/pulseaudio.git"
 use_git = false
 stage = 11
+build_system = "meson"
+skip_optimization = true
+meson_flags = "-Ddoxygen=false -Dtests=false -Ddatabase=simple -Dman=false"
 
 [packages.pavucontrol]
 version = "6.2"
