--- a/packages/l.toml
+++ b/packages/l.toml
@@ -434,6 +434,18 @@ stage = 8
 build_system = "cmake"
 cmake_flags = "-DCMAKE_INSTALL_LIBDIR=lib -DENABLE_STATIC=OFF -DWITH_JAVA=OFF"
 
+[packages.libsndfile]
+version = "1.2.2"
+version_check = "github:libsndfile/libsndfile"
+description = "C library for reading and writing sound files"
+url = "https://github.com/libsndfile/libsndfile/releases/download/${version}/libsndfile-${version}.tar.xz"
+git_url = "https://github.com/libsndfile/libsndfile.git"
+use_git = false
+stage = 8
+build_system = "cmake"
+skip_optimization = true
+cmake_flags = "-DBUILD_TESTING=OFF -DENABLE_EXTERNAL_LIBS=OFF -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DBUILD_SHARED_LIBS=ON"
+
 [packages.libdrm]
 version = "2.4.131"
 version_check = "freedesktop:mesa/drm"
