--- a/packages/l.toml
+++ b/packages/l.toml
@@ -732,7 +732,7 @@ stage = 13
 # Note: Build with --host=i686-pc-linux-gnu
 
 [packages.lib32-mesa]
-version = "24.3.4"
+version = "25.3.4"
 version_check = "freedesktop:mesa/mesa"
 description = "OpenGL implementation (32-bit)"
 url = "https://mesa.freedesktop.org/archive/mesa-${version}.tar.xz"
@@ -752,8 +752,8 @@ stage = 13
 # STAGE 14: Development Tools (heavy builds)
 
 [packages.llvm]
-version = "19.1.7"
-version_check = "url:https://github.com/llvm/llvm-project/tags|llvmorg-([0-9]+\.[0-9]+\.[0-9]+)"
+version = "21.1.8"
+version_check = "github:llvm/llvm-project"
 description = "LLVM compiler infrastructure"
 url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-${version}/llvm-project-${version}.src.tar.xz"
 git_url = "https://github.com/llvm/llvm-project.git"
