Fix version checks and remove meta-packages
- Remove packages with empty URLs (not real packages):
  - intel-oneapi-hpc, intel-oneapi-base (require registration)
  - nvhpc (requires registration)
  - virtio-gpu (kernel module, not a package)
  - xorg-server-modesetting (built into xorg-server)
  - libshadow (built into xorg-server)
  - expectrl-tcl (unused)
  - gcc-stable (redundant with gcc)

- Fix version_check patterns:
  - dejavu-fonts: use direct URL pattern
  - firefox/firefox-bin: fix URL pattern for releases
  - gtk3: use gnome:gtk+
  - intel-ucode: use direct URL pattern for microcode-YYYYMMDD tags
  - iproute2: add version_check
  - mpdecimal: add version_check
  - nspr/nss: add version_check with Mozilla archive patterns
  - pk: add skip version_check
  - proton-ge: use direct URL pattern for GE-Proton tags
  - tcl: use GitHub tags with core- prefix
  - gperf: add gnu: version_check
  - google-chrome: add skip version_check

- Update X.org library versions:
  - libXres: 1.2.2 -> 1.2.3
  - libXrandr: 1.5.4 -> 1.5.5
  - libXinerama: 1.1.5 -> 1.1.6
  - libXext: 1.3.6 -> 1.3.7
  - libXcomposite: 0.4.6 -> 0.4.7
  - libXdamage: 1.1.6 -> 1.1.7
  - libXmu: 1.2.1 -> 1.3.0
  - libXxf86vm: 1.1.6 -> 1.1.7
  - libXpm: 3.5.17 -> 3.5.18
  - xf86-video-fbdev: 0.5.0 -> 0.5.1

--- a/packages/g.toml
+++ b/packages/g.toml
@@ -14,12 +14,6 @@ build_commands = [
 ]
 provides = ["/usr/bin/gdb"]
 
-[packages.gcc-stable]
-version = "14.2.0"
-description = "GNU Compiler Collection (stable release for cross-compilation)"
-url = "https://ftpmirror.gnu.org/gnu/gcc/gcc-${version}/gcc-${version}.tar.xz"
-stage = 0
-
 [packages.gcc]
 version = "16-20260118"
 version_check = "gcc-snapshot:"
@@ -182,6 +176,7 @@ build_commands = [
 
 [packages.gperf]
 version = "3.3"
+version_check = "gnu:gperf"
 description = "Perfect hash function generator"
 url = "https://ftpmirror.gnu.org/gnu/gperf/gperf-${version}.tar.gz"
 stage = 3
@@ -313,6 +308,7 @@ provides = ["/usr/lib/libgdk_pixbuf-2.0.so"]
 
 [packages.google-chrome]
 version = "stable"
+version_check = "url:https://dl.google.com/linux/direct/|skip"
 description = "Google Chrome browser (binary from Google)"
 url = "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
 tarball = "google-chrome-stable_current_amd64.deb"
@@ -339,7 +335,7 @@ provides = ["/usr/lib/google-chrome/google-chrome"]
 
 [packages.gtk3]
 version = "3.24.43"
-version_check = "gnome:gtk"
+version_check = "gnome:gtk+"
 description = "GTK+ 3 toolkit"
 url = "https://download.gnome.org/sources/gtk+/3.24/gtk+-${version}.tar.xz"
 git_url = "https://gitlab.gnome.org/GNOME/gtk.git"
