--- a/packages/i.toml
+++ b/packages/i.toml
@@ -1,5 +1,6 @@
 [packages.iproute2]
 version = "6.18.0"
+version_check = "url:https://www.kernel.org/pub/linux/utils/net/iproute2/|iproute2-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
 description = "IP routing utilities"
 url = "https://www.kernel.org/pub/linux/utils/net/iproute2/iproute2-${version}.tar.xz"
 stage = 3
@@ -76,34 +77,11 @@ git_url = "https://gitlab.freedesktop.org/xorg/app/iceauth.git"
 use_git = false
 stage = 8
 
-[packages.intel-oneapi-hpc]
-version = "2025.3"
-version_check = "url:https://www.intel.com/content/www/us/en/developer/tools/oneapi/hpc-toolkit-download.html|([0-9]+\.[0-9]+)"
-description = "Intel oneAPI HPC Toolkit (ifort, ifx, icc, icx)"
-# Manual download required from Intel developer site (registration needed)
-url = ""
-git_url = ""
-use_git = false
-stage = 15
-# Note: Binary installer, run with --silent --eula accept
-# Includes: ifx (new Fortran), ifort (classic), icx, icc, MKL, MPI
-
-[packages.intel-oneapi-base]
-version = "2025.3"
-version_check = "url:https://www.intel.com/content/www/us/en/developer/tools/oneapi/base-toolkit-download.html|([0-9]+\.[0-9]+)"
-description = "Intel oneAPI Base Toolkit"
-# Manual download required from Intel developer site (registration needed)
-url = ""
-git_url = ""
-use_git = false
-stage = 15
-# Note: Required for MKL, TBB, DPC++
-
 # STAGE 16: Streaming (Moonlight/Sunshine)
 
 [packages.intel-ucode]
 version = "20251111"
-version_check = "github:intel/Intel-Linux-Processor-Microcode-Data-Files"
+version_check = "url:https://github.com/intel/Intel-Linux-Processor-Microcode-Data-Files/tags|microcode-([0-9]+)"
 description = "Intel CPU microcode"
 url = "https://github.com/intel/Intel-Linux-Processor-Microcode-Data-Files/archive/microcode-${version}.tar.gz"
 git_url = "https://github.com/intel/Intel-Linux-Processor-Microcode-Data-Files.git"
