--- a/packages/d.toml
+++ b/packages/d.toml
@@ -57,7 +57,7 @@ build_commands = [
 
 [packages.dejavu-fonts]
 version = "2.37"
-version_check = "github:dejavu-fonts/dejavu-fonts"
+version_check = "url:https://github.com/dejavu-fonts/dejavu-fonts/releases|version_([0-9]+)_([0-9]+)"
 description = "DejaVu TrueType fonts"
 url = "https://github.com/dejavu-fonts/dejavu-fonts/releases/download/version_2_37/dejavu-fonts-ttf-${version}.tar.bz2"
 source_dir = "dejavu-fonts-ttf-${version}"
