--- a/packages/f.toml
+++ b/packages/f.toml
@@ -68,7 +68,7 @@ stage = 8
 
 [packages.fontconfig]
 version = "2.16.0"
-version_check = "freedesktop:fontconfig/fontconfig"
+version_check = "url:https://www.freedesktop.org/software/fontconfig/release/|fontconfig-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
 description = "Font configuration library"
 url = "https://www.freedesktop.org/software/fontconfig/release/fontconfig-${version}.tar.xz"
 git_url = "https://gitlab.freedesktop.org/fontconfig/fontconfig.git"
@@ -99,7 +99,7 @@ build_system = "meson"
 
 [packages.firefox]
 version = "147.0.1"
-version_check = "url:https://archive.mozilla.org/pub/firefox/releases/|([0-9]+\.[0-9]+\.?[0-9]*)/linux"
+version_check = "url:https://archive.mozilla.org/pub/firefox/releases/|href=\\\"([0-9]+\\.[0-9]+\\.?[0-9]*)/\\\""
 description = "Mozilla Firefox web browser (source)"
 url = "https://archive.mozilla.org/pub/firefox/releases/${version}/source/firefox-${version}.source.tar.xz"
 git_url = ""
@@ -109,7 +109,7 @@ stage = 11
 
 [packages.firefox-bin]
 version = "147.0.1"
-version_check = "url:https://archive.mozilla.org/pub/firefox/releases/|([0-9]+\.[0-9]+\.?[0-9]*)/linux"
+version_check = "url:https://archive.mozilla.org/pub/firefox/releases/|href=\\\"([0-9]+\\.[0-9]+\\.?[0-9]*)/\\\""
 description = "Mozilla Firefox web browser (prebuilt binary)"
 url = "https://archive.mozilla.org/pub/firefox/releases/${version}/linux-x86_64/en-US/firefox-${version}.tar.xz"
 git_url = ""
@@ -127,7 +127,7 @@ provides = ["/usr/bin/firefox"]
 
 [packages.ffmpeg]
 version = "8.0.1"
-version_check = "url:https://github.com/FFmpeg/FFmpeg/tags|n([0-9]+\\.[0-9]+\\.?[0-9]*)"
+version_check = "url:https://ffmpeg.org/releases/|ffmpeg-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
 description = "Complete multimedia framework"
 url = "https://ffmpeg.org/releases/ffmpeg-${version}.tar.xz"
 git_url = "https://git.ffmpeg.org/ffmpeg.git"
