--- a/packages/m.toml
+++ b/packages/m.toml
@@ -43,6 +43,7 @@ provides = ["/usr/bin/man", "/usr/bin/mandb"]
 
 [packages.mpdecimal]
 version = "4.0.1"
+version_check = "url:https://www.bytereef.org/software/mpdecimal/releases/|mpdecimal-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
 description = "Library for decimal floating point arithmetic"
 url = "https://www.bytereef.org/software/mpdecimal/releases/mpdecimal-${version}.tar.gz"
 stage = 4
