--- a/packages/p.toml
+++ b/packages/p.toml
@@ -199,7 +199,7 @@ repology = "pavucontrol"
 
 [packages.proton-ge]
 version = "GE-Proton10-2"
-version_check = "github:GloriousEggroll/proton-ge-custom"
+version_check = "url:https://github.com/GloriousEggroll/proton-ge-custom/tags|(GE-Proton[0-9]+-[0-9]+)"
 description = "Proton-GE custom Proton build"
 url = "https://github.com/GloriousEggroll/proton-ge-custom/releases/download/${version}/${version}.tar.gz"
 git_url = "https://github.com/GloriousEggroll/proton-ge-custom.git"
@@ -229,7 +229,7 @@ stage = 17
 
 [packages.poppler]
 version = "26.01.0"
-version_check = "freedesktop:poppler/poppler"
+version_check = "url:https://poppler.freedesktop.org/|poppler-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
 description = "PDF rendering library"
 url = "https://poppler.freedesktop.org/poppler-${version}.tar.xz"
 git_url = "https://gitlab.freedesktop.org/poppler/poppler.git"
@@ -238,6 +238,7 @@ stage = 17
 
 [packages.pk]
 version = "0.0.2"
+version_check = "url:https://github.com/ert/pk/tags|skip"
 description = "Minimal POSIX shell package manager"
 stage = 3
 build_order = 1
