--- a/packages/t.toml
+++ b/packages/t.toml
@@ -15,7 +15,7 @@ build_commands = [
 
 [packages.tcl]
 version = "8.6.17"
-version_check = "url:https://www.tcl-lang.org/software/tcltk/download.html|Tcl/Tk ([0-9]+\\.[0-9]+\\.[0-9]+)"
+version_check = "url:https://github.com/tcltk/tcl/tags|core-([0-9]+-[0-9]+-[0-9]+)"
 description = "Tool Command Language"
 url = "https://prdownloads.sourceforge.net/tcl/tcl${version}-src.tar.gz"
 git_url = "https://github.com/tcltk/tcl.git"
