--- a/packages/u.toml
+++ b/packages/u.toml
@@ -21,8 +21,8 @@ build_system = "autotools"
 provides = ["/usr/share/pkgconfig/xorg-macros.pc"]
 
 [packages.util-linux]
-version = "2.41"
-version_check = "url:https://www.kernel.org/pub/linux/utils/util-linux/|v([0-9]+\\.[0-9]+)"
+version = "2.41.3"
+version_check = "url:https://www.kernel.org/pub/linux/utils/util-linux/v2.41/|util-linux-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
 description = "Linux system utilities"
 url = "https://www.kernel.org/pub/linux/utils/util-linux/v2.41/util-linux-${version}.tar.xz"
 git_url = "https://github.com/util-linux/util-linux.git"
