Add gedit and steam with dependencies
New packages:
- aspell, aspell-en: Spell checker and English dictionary
- enchant: Spell checking library abstraction
- icu: International Components for Unicode
- gobject-introspection: GObject introspection framework
- libtiff: TIFF image library
- libpeas: Plugin engine for GNOME
- libgedit-amtk, libgedit-gtksourceview, libgedit-tepl: gedit libraries
- gspell: GNOME spell checking library

Updated packages:
- gedit: Added build system and dependencies (v48.1)
- steam: Added build commands for binary installer (v1.0.0.85)

--- a/packages/g.toml
+++ b/packages/g.toml
@@ -1,3 +1,17 @@
+[packages.gobject-introspection]
+version = "1.86.0"
+version_check = "gnome:gobject-introspection"
+description = "GObject introspection framework"
+url = "https://download.gnome.org/sources/gobject-introspection/1.86/gobject-introspection-${version}.tar.xz"
+git_url = "https://gitlab.gnome.org/GNOME/gobject-introspection.git"
+use_git = false
+stage = 4
+build_order = 41
+depends = ["glib", "python"]
+build_system = "meson"
+meson_flags = "-Dgtk_doc=false -Dcairo=disabled"
+provides = ["/usr/bin/g-ir-scanner", "/usr/lib/libgirepository-1.0.so"]
+
 [packages.gdb]
 version = "17.1"
 version_check = "gnu:gdb"
@@ -399,15 +413,32 @@ build_commands = [
     "cp bin/gh ${PKG}/usr/bin/"
 ]
 
+[packages.gspell]
+version = "1.14.2"
+version_check = "gnome:gspell"
+description = "GNOME spell checking library"
+url = "https://download.gnome.org/sources/gspell/1.14/gspell-${version}.tar.xz"
+git_url = "https://gitlab.gnome.org/GNOME/gspell.git"
+use_git = false
+stage = 9
+build_order = 5
+depends = ["gtk3", "enchant", "icu"]
+build_system = "meson"
+meson_flags = "-Dgtk_doc=false -Dintrospection=false -Dvapi=false -Dinstall_tests=false"
+provides = ["/usr/lib/libgspell-1.so"]
+
 [packages.gedit]
-version = "49.0"
+version = "48.1"
 version_check = "github:GNOME/gedit"
 description = "GNOME text editor"
-url = "https://download.gnome.org/sources/gedit/49/gedit-${version}.tar.xz"
+url = "https://download.gnome.org/sources/gedit/48/gedit-${version}.tar.xz"
 git_url = "https://gitlab.gnome.org/GNOME/gedit.git"
 use_git = false
 stage = 11
-repology = "gedit"
+depends = ["gtk3", "gspell", "libpeas", "libgedit-tepl"]
+build_system = "meson"
+meson_flags = "-Dgtk_doc=false -Dintrospection=false -Dvapi=false"
+provides = ["/usr/bin/gedit"]
 
 [packages.gamemode]
 version = "1.8.2"
