--- a/packages/e.toml
+++ b/packages/e.toml
@@ -1,3 +1,17 @@
+[packages.enchant]
+version = "2.8.14"
+version_check = "github:AbiWord/enchant"
+description = "Spell checking library"
+url = "https://github.com/AbiWord/enchant/releases/download/v${version}/enchant-${version}.tar.gz"
+git_url = "https://github.com/AbiWord/enchant.git"
+use_git = false
+stage = 9
+build_order = 1
+depends = ["glib", "aspell"]
+build_system = "autotools"
+configure_flags = "--disable-static"
+provides = ["/usr/lib/libenchant-2.so"]
+
 [packages.expat]
 version = "2.7.3"
 version_check = "github:libexpat/libexpat"
