--- a/packages/i.toml
+++ b/packages/i.toml
@@ -1,3 +1,17 @@
+[packages.icu]
+version = "78.2"
+version_check = "github:unicode-org/icu"
+description = "International Components for Unicode"
+url = "https://github.com/unicode-org/icu/releases/download/release-78-2/icu4c-78_2-src.tgz"
+git_url = "https://github.com/unicode-org/icu.git"
+use_git = false
+source_dir = "icu/source"
+stage = 4
+build_order = 6
+build_system = "autotools"
+configure_flags = "--disable-samples --disable-tests"
+provides = ["/usr/lib/libicuuc.so"]
+
 [packages.iproute2]
 version = "6.18.0"
 version_check = "url:https://www.kernel.org/pub/linux/utils/net/iproute2/|iproute2-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
