--- a/packages/l.toml
+++ b/packages/l.toml
@@ -193,6 +193,18 @@ depends = ["libxml2"]
 configure_flags = "--without-python"
 provides = ["/usr/bin/xsltproc", "/usr/lib/libxslt.so"]
 
+[packages.libtiff]
+version = "4.7.0"
+version_check = "url:https://download.osgeo.org/libtiff/|tiff-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
+description = "TIFF image library"
+url = "https://download.osgeo.org/libtiff/tiff-${version}.tar.gz"
+git_url = "https://gitlab.com/libtiff/libtiff.git"
+use_git = false
+stage = 8
+build_system = "cmake"
+cmake_flags = "-DBUILD_SHARED_LIBS=ON -Dtiff-tests=OFF -Dtiff-docs=OFF"
+provides = ["/usr/lib/libtiff.so"]
+
 [packages.libtool]
 version = "2.5.4"
 version_check = "gnu:libtool"
@@ -804,6 +816,62 @@ url = "https://github.com/lm-sensors/lm-sensors/archive/refs/tags/V${version}.ta
 git_url = "https://github.com/lm-sensors/lm-sensors.git"
 use_git = false
 stage = 19
+
+[packages.libpeas]
+version = "1.36.0"
+version_check = "gnome:libpeas"
+description = "Plugin engine for GNOME applications"
+url = "https://download.gnome.org/sources/libpeas/1.36/libpeas-${version}.tar.xz"
+git_url = "https://gitlab.gnome.org/GNOME/libpeas.git"
+use_git = false
+stage = 9
+build_order = 4
+depends = ["gtk3", "gobject-introspection"]
+build_system = "meson"
+meson_flags = "-Dgtk_doc=false -Dintrospection=false -Dvapi=false -Ddemos=false -Dglade_catalog=false"
+provides = ["/usr/lib/libpeas-1.0.so"]
+
+[packages.libgedit-tepl]
+version = "6.14.0"
+version_check = "gnome:libgedit-tepl"
+description = "Text editor product line library"
+url = "https://download.gnome.org/sources/libgedit-tepl/6.14/libgedit-tepl-${version}.tar.xz"
+git_url = "https://gitlab.gnome.org/World/gedit/libgedit-tepl.git"
+use_git = false
+stage = 9
+build_order = 6
+depends = ["gtk3", "libgedit-gtksourceview", "libgedit-amtk", "icu"]
+build_system = "meson"
+meson_flags = "-Dgtk_doc=false -Dintrospection=false -Dgobject_introspection=false"
+provides = ["/usr/lib/libgedit-tepl-6.so"]
+
+[packages.libgedit-gtksourceview]
+version = "299.6.0"
+version_check = "gnome:libgedit-gtksourceview"
+description = "Source code editing widget for gedit"
+url = "https://download.gnome.org/sources/libgedit-gtksourceview/299.6/libgedit-gtksourceview-${version}.tar.xz"
+git_url = "https://gitlab.gnome.org/World/gedit/libgedit-gtksourceview.git"
+use_git = false
+stage = 9
+build_order = 2
+depends = ["gtk3", "libxml2"]
+build_system = "meson"
+meson_flags = "-Dgtk_doc=false -Dintrospection=false"
+provides = ["/usr/lib/libgedit-gtksourceview-300.so"]
+
+[packages.libgedit-amtk]
+version = "5.9.2"
+version_check = "gnome:libgedit-amtk"
+description = "Actions, Menus and Toolbars Kit for GTK"
+url = "https://download.gnome.org/sources/libgedit-amtk/5.9/libgedit-amtk-${version}.tar.xz"
+git_url = "https://gitlab.gnome.org/World/gedit/libgedit-amtk.git"
+use_git = false
+stage = 9
+build_order = 3
+depends = ["gtk3"]
+build_system = "meson"
+meson_flags = "-Dgtk_doc=false -Dintrospection=false"
+provides = ["/usr/lib/libgedit-amtk-5.so"]
 
 [packages.libpipeline]
 version = "1.5.8"
