Fix package URLs and versions for actually available releases
- aspell/aspell-en: Use mirrors.kernel.org (ftp.gnu.org timeout)
- icu: 77.1 (78.2 tarball not yet available)
- libpeas: 2.2.0 (latest on GNOME)
- libgedit-tepl: 6.12.0 (6.14.0 not yet on GNOME)
- libgedit-gtksourceview: 299.4.0 (299.6.0 not yet on GNOME)
- libgedit-amtk: 5.9.0 (5.9.2 not yet on GNOME)

--- a/packages/a.toml
+++ b/packages/a.toml
@@ -2,7 +2,7 @@
 version = "0.60.8.1"
 version_check = "gnu:aspell"
 description = "Spell checker"
-url = "https://ftpmirror.gnu.org/gnu/aspell/aspell-${version}.tar.gz"
+url = "https://mirrors.kernel.org/gnu/aspell/aspell-${version}.tar.gz"
 git_url = ""
 use_git = false
 stage = 9
@@ -13,9 +13,9 @@ provides = ["/usr/bin/aspell", "/usr/lib/libaspell.so"]
 
 [packages.aspell-en]
 version = "2020.12.07-0"
-version_check = "url:https://ftpmirror.gnu.org/gnu/aspell/dict/en/|aspell6-en-([0-9.-]+)\\.tar"
+version_check = "url:https://mirrors.kernel.org/gnu/aspell/dict/en/|aspell6-en-([0-9.-]+)\\.tar"
 description = "English dictionary for aspell"
-url = "https://ftpmirror.gnu.org/gnu/aspell/dict/en/aspell6-en-${version}.tar.bz2"
+url = "https://mirrors.kernel.org/gnu/aspell/dict/en/aspell6-en-${version}.tar.bz2"
 source_dir = "aspell6-en-${version}"
 stage = 9
 build_order = 1
