--- a/packages/l.toml
+++ b/packages/l.toml
@@ -818,10 +818,10 @@ use_git = false
 stage = 19
 
 [packages.libpeas]
-version = "1.36.0"
+version = "2.2.0"
 version_check = "gnome:libpeas"
 description = "Plugin engine for GNOME applications"
-url = "https://download.gnome.org/sources/libpeas/1.36/libpeas-${version}.tar.xz"
+url = "https://download.gnome.org/sources/libpeas/${version_mm}/libpeas-${version}.tar.xz"
 git_url = "https://gitlab.gnome.org/GNOME/libpeas.git"
 use_git = false
 stage = 9
@@ -832,10 +832,10 @@ meson_flags = "-Dgtk_doc=false -Dintrospection=false -Dvapi=false -Ddemos=false 
 provides = ["/usr/lib/libpeas-1.0.so"]
 
 [packages.libgedit-tepl]
-version = "6.14.0"
+version = "6.12.0"
 version_check = "gnome:libgedit-tepl"
 description = "Text editor product line library"
-url = "https://download.gnome.org/sources/libgedit-tepl/6.14/libgedit-tepl-${version}.tar.xz"
+url = "https://download.gnome.org/sources/libgedit-tepl/${version_mm}/libgedit-tepl-${version}.tar.xz"
 git_url = "https://gitlab.gnome.org/World/gedit/libgedit-tepl.git"
 use_git = false
 stage = 9
@@ -846,10 +846,10 @@ meson_flags = "-Dgtk_doc=false -Dintrospection=false -Dgobject_introspection=fal
 provides = ["/usr/lib/libgedit-tepl-6.so"]
 
 [packages.libgedit-gtksourceview]
-version = "299.6.0"
+version = "299.4.0"
 version_check = "gnome:libgedit-gtksourceview"
 description = "Source code editing widget for gedit"
-url = "https://download.gnome.org/sources/libgedit-gtksourceview/299.6/libgedit-gtksourceview-${version}.tar.xz"
+url = "https://download.gnome.org/sources/libgedit-gtksourceview/299/libgedit-gtksourceview-${version}.tar.xz"
 git_url = "https://gitlab.gnome.org/World/gedit/libgedit-gtksourceview.git"
 use_git = false
 stage = 9
@@ -860,10 +860,10 @@ meson_flags = "-Dgtk_doc=false -Dintrospection=false"
 provides = ["/usr/lib/libgedit-gtksourceview-300.so"]
 
 [packages.libgedit-amtk]
-version = "5.9.2"
+version = "5.9.0"
 version_check = "gnome:libgedit-amtk"
 description = "Actions, Menus and Toolbars Kit for GTK"
-url = "https://download.gnome.org/sources/libgedit-amtk/5.9/libgedit-amtk-${version}.tar.xz"
+url = "https://download.gnome.org/sources/libgedit-amtk/${version_mm}/libgedit-amtk-${version}.tar.xz"
 git_url = "https://gitlab.gnome.org/World/gedit/libgedit-amtk.git"
 use_git = false
 stage = 9
