Add FPGA/EDA toolchain packages
- LLVM: add RISCV target for cross-compilation
- iverilog 12.0: Verilog simulator
- icestorm: iCE40 FPGA bitstream tools
- yosys 0.61: RTL synthesis
- nextpnr 0.9: FPGA place and route
- gtkwave 3.3.121: waveform viewer
- tinyprog 1.0.23: TinyFPGA BX programmer
- boost 1.90.0: C++ libraries (nextpnr dep)
- eigen 5.0.1: linear algebra (nextpnr dep)

--- a/packages/e.toml
+++ b/packages/e.toml
@@ -129,3 +129,17 @@ build_commands = [
     "unset CFLAGS CXXFLAGS LDFLAGS && make -j${NPROC} CFLAGS='-O2 -march=znver3' LDFLAGS=''",
     "make DESTDIR=${PKG} install"
 ]
+
+# FPGA/EDA Tools
+
+[packages.eigen]
+version = "5.0.1"
+version_check = "gitlab:libeigen/eigen"
+description = "C++ template library for linear algebra"
+url = "https://gitlab.com/libeigen/eigen/-/archive/${version}/eigen-${version}.tar.gz"
+git_url = "https://gitlab.com/libeigen/eigen.git"
+use_git = false
+stage = 8
+build_system = "cmake"
+cmake_flags = "-DBUILD_TESTING=OFF"
+provides = ["/usr/include/eigen3/Eigen/Core"]
