--- a/packages/b.toml
+++ b/packages/b.toml
@@ -130,4 +130,20 @@ git_url = ""
 use_git = false
 stage = 19
 
+# FPGA/EDA Tools
+
+[packages.boost]
+version = "1.90.0"
+version_check = "github:boostorg/boost"
+description = "Boost C++ libraries"
+url = "https://github.com/boostorg/boost/releases/download/boost-${version}/boost-${version}-b2-nodocs.tar.xz"
+git_url = "https://github.com/boostorg/boost.git"
+use_git = false
+stage = 8
+build_commands = [
+    "./bootstrap.sh --prefix=/usr --with-python=python3",
+    "./b2 install --prefix=${PKG}/usr variant=release threading=multi link=shared runtime-link=shared"
+]
+provides = ["/usr/lib/libboost_system.so"]
+
 # NVMe tools
