--- a/packages/g.toml
+++ b/packages/g.toml
@@ -528,4 +528,19 @@ build_commands = [
 ]
 provides = ["/usr/lib/libgdbm.so"]
 
+# FPGA/EDA Tools
+
+[packages.gtkwave]
+version = "3.3.121"
+version_check = "github:gtkwave/gtkwave"
+description = "Waveform viewer for VCD, LXT, FST simulation dumps"
+url = "https://github.com/gtkwave/gtkwave/archive/refs/tags/v${version}.tar.gz"
+git_url = "https://github.com/gtkwave/gtkwave.git"
+use_git = false
+stage = 15
+depends = ["gtk3", "tcl", "tk", "bzip2", "xz"]
+build_system = "meson"
+meson_flags = "-Dgtk=3"
+provides = ["/usr/bin/gtkwave"]
+
 # STAGE 18: Scientific Computing Languages
