--- a/packages/n.toml
+++ b/packages/n.toml
@@ -88,6 +88,22 @@ build_commands = [
     "install -Dm755 ninja ${PKG}/usr/bin/ninja"
 ]
 
+# FPGA/EDA Tools
+
+[packages.nextpnr]
+version = "0.9"
+version_check = "github:YosysHQ/nextpnr"
+description = "Portable FPGA place and route tool (iCE40, ECP5, Gowin)"
+url = "https://github.com/YosysHQ/nextpnr/archive/refs/tags/nextpnr-${version}.tar.gz"
+git_url = "https://github.com/YosysHQ/nextpnr.git"
+use_git = false
+source_dir = "nextpnr-nextpnr-${version}"
+stage = 15
+depends = ["icestorm", "python", "boost", "eigen"]
+build_system = "cmake"
+cmake_flags = "-DARCH=ice40 -DICESTORM_INSTALL_PREFIX=/usr -DBUILD_GUI=OFF"
+provides = ["/usr/bin/nextpnr-ice40"]
+
 [packages.nextcloud-client]
 version = "4.0.6"
 version_check = "github:nextcloud/desktop"
